--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,13 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+    attributes:
+      listing:
+        listing_images: ""
+    errors:
+      models:
+        listing:
+          attributes:
+            listing_images:
+              blank: "Add at least one image"
