Add custom validation error message for address postcode

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,8 @@ en:
   hello: "Hello world"
   activerecord:
     attributes:
+      address:
+        postcode: "Postal code"
       listing:
         listing_images: ""
     errors:
