Add custom validation message for user emal field

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,8 @@ en:
         postcode: "Postal code"
       listing:
         listing_images: ""
+      user:
+        email: "Email address"
     errors:
       models:
         listing:
